--- a/index.html
+++ b/index.html
@@ -31,14 +31,34 @@
 	<div class="menu_ball topmenu_item"><div class="text">Мячи</div></div>
 	</div>
 	</div>
-	<div class="imga">
+	
+	<!-- <div class="imga">
 	<div ><img  src="image/slides/slide-1.png" alt=""></div>
 	<div><img  src="image/slides/slide-2.png" alt=""></div>
 	<div><img  src="image/slides/slide-3.png" alt=""></div>
 	<div><img  src="image/slides/slide-4.png" alt=""></div>
+	</div> -->
+	<div class="slider">
+	<div class="main_slides">
+	<div class="slides">
+	<div class="slides_reel">
+	<a href="#"><img src="image/slides/slide-1.png" alt="" /></a>
+	<a href="#"><img src="image/slides/slide-2.png" alt="" /></a>
+	<a href="#"><img src="image/slides/slide-3.png" alt="" /></a>
+	<a href="#"><img src="image/slides/slide-4.png" alt="" /></a>
+	</div>
+	</div>	
+	</div>
+	<div class="page_s">
+	<a href="#" rel="1">1</a>
+	<a href="#" rel="2">2</a>
+	<a href="#" rel="3">3</a>
+	<a href="#" rel="4">4</a>
 	</div>
 	
-
+	</div>
+	
+<div>
 	
 	
 	
